navbar z-index fix

--- a/sass/_mobile-first.scss
+++ b/sass/_mobile-first.scss
@@ -98,6 +98,7 @@ h2{
 	font-weight: bold;
 	color: $primary-color;
 	position: fixed;
+	z-index: 420;
 	top: 0;
 	right: 0;
 	left: 0;
@@ -186,6 +187,7 @@ h2{
     background: rgba(95, 95, 95, .98);
     color: white;
     position: fixed;
+    z-index: 420;
     margin-top: 84px;
     padding: 3px;
     font-size: 12px;
